Fixed issue with extra margin on graph container causing scroll bars to show up

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
 
-* { box-sizing: border-box; }
+* { 
+  box-sizing: border-box; 
+}
 body {
   font-family: 'Noto Sans JP', sans-serif;
   display: flex;
@@ -98,15 +100,11 @@ input[type=text] {
 }
 
 .selected-artists {
-  /* max-height: 120px; */
-  /* width: 100%; */
   padding: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 0;
-  /* overflow: hidden;
-  overflow-y: scroll; */
 }
 
 .selected-artists li {
@@ -142,7 +140,7 @@ input[type=text] {
 }
 
 .selected-artists li button:hover {
-  background-color: #8c564b; /*rgb(77, 60, 60);*/
+  background-color: #8c564b;
   transform: scale(1.2);
 }
 
@@ -153,25 +151,14 @@ input[type=text] {
 
 .artist-info-container {
   width: 100%;
-  /* height: 320px; */
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .artist-info-name {
-  /* flex-grow: 1; */
   transform: translateY(-205px);
 }
-
-/* .artist-info-img {
-  visibility: hidden;
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 50%;
-  /* margin-bottom: 20px;
-} */
 
 .player-container {
   width: 300px;
@@ -179,28 +166,14 @@ input[type=text] {
   position: relative;
 }
 .spotify-player {
-  /* visibility: hidden; */
   position: absolute;
   top: 0;
   left: 0;
   z-index: 1;
   transform-origin: bottom left;
   transform: scale(3.75);
-  /* position: absolute;
-  bottom: 0;
-  left: 0; */
 }
 
-.link {
-  stroke: #000;
-  stroke-width: 1.5px;
-}
-
-.node {
-  fill: #1f77b4;
-  stroke: #fff;
-  stroke-width: 1.5px;
-}
 
 .graph-container {
   background-color: #fff;
@@ -212,7 +185,9 @@ input[type=text] {
 }
 
 .graph {
-  height: 100vh;
+  height: 100%;
+  width: 100%;
+  vertical-align: top;
 }
 
 .scrollbox {
